--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
@@ -21,5 +22,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "swagger-ui-express": "^4.6.3"
   }
 }
