--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
+    "prisma": "^4.13.0",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "swagger-ui-express": "^4.6.3"
   }
 }
