--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "banpal",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --poll src/index.ts",
+    "dev": "ts-node-dev --poll src/infra/http/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "yup": "^1.1.1"
   }
 }
