--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --poll src/infra/http/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/server.js"
+    "start": "npm run build && nodemon dist/server.js",
+    "dev2": "nodemon src/infra/http/server.ts"
   },
   "keywords": [],
   "author": "",
