--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "dotenv": "^16.0.3",
     "swagger-ui-express": "^4.6.3",
     "yup": "^1.1.1"
   }
