--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --poll src/infra/http/server.ts",
+    "dev": "ts-node-dev --poll src/App/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && nodemon dist/server.js",
-    "dev2": "nodemon src/infra/http/server.ts"
+    "start": "npm run build && nodemon dist/App/server.js",
+    "dev2": "nodemon src/App/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
@@ -21,6 +22,8 @@
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
     "rimraf": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
@@ -28,7 +31,7 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
-    "swagger-ui-express": "^4.6.3",
+    "swagger-node-express": "^2.1.3",
     "yup": "^1.1.1"
   }
 }
