--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL=postgres://postgres:154826@localhost:5432/BanPal
+DATABASE_URL=postgresql://postgres:154826@localhost:5432/postgres
