--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --poll src/App/server.ts",
+    "dev": "npx prisma generate && ts-node-dev --poll src/App/server.ts",
+    "dev2": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && ts-node-dev --poll src/app/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "npm run build && nodemon dist/App/server.js",
-    "dev2": "nodemon src/App/server.ts"
+    "start": "npm run build && nodemon dist/app/server.js",
+    "up:dev": "npm i && npm run build && docker-compose --env-file .env up -d"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +20,12 @@
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.9",
+    "@types/node": "^20.1.1",
     "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
     "rimraf": "^5.0.0",
