--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev2": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && ts-node-dev --poll src/app/server.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && nodemon dist/app/server.js",
-    "up:dev": "npm i && npm run build && docker-compose --env-file .env up -d && npx prisma generate && npm run dev"
+    "up:dev": "npm i && npm run build && docker-compose --env-file .env up -d && npx prisma migrate dev && npm run dev"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
