--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
-DATABASE_URL=postgresql://postgres:154826@localhost:5432/postgres
+# DATABASE
+DATABASE_URL=postgresql://postgres:154826@database:5432/postgres
+POSTGRES_PASSWORD=154826
+POSTGRES_DB=postgres
