--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,33 @@
 version: "3.4"
 
 services:
-  db:
-    container_name: Database
+  app:
+    build:
+      context: .
+      target: development
+    command: sh -c "npm run up:dev"
+    working_dir: /app
+    volumes:
+      - ./:/app
+    ports:
+      - '3000:3000'
+    depends_on:
+      - database
+    networks:
+      - backend
+
+  database:
+    container_name: database
     image: postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: 154826
-      POSTGRES_DB: postgres
+    env_file:
+      - .env
     ports:
       - '5432:5432'
-    volumes:
-      - ./pgdata:/var/lib/postgres/data
+    networks:
+      - backend
+#    volumes:
+#      - ./pgdata:/var/lib/postgres/data
+
+networks:
+  backend:
+    driver: bridge
