--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,49 @@
-version: "3.4"
-
+version: '3'
 services:
-  app:
-    build:
-      context: .
-      target: development
-    command: sh -c "npm run up:dev"
-    working_dir: /app
-    volumes:
-      - ./:/app
-    ports:
-      - '3000:3000'
-    depends_on:
-      - database
-    networks:
-      - backend
-
-  database:
+  db:
     container_name: database
     image: postgres
-    env_file:
-      - .env
+    restart: always
     ports:
       - '5432:5432'
-    networks:
-      - backend
+    environment:
+      POSTGRES_PASSWORD: 154826
+      POSTGRES_DB: postgres
+    volumes:
+      - ./data:/var/lib/postgresql/data
+
+
+
+# version: "3.4"
+
+# services:
+#   app:
+#     build:
+#       context: .
+#       target: development
+#     command: sh -c "npm run up:dev"
+#     working_dir: /app
+#     volumes:
+#       - ./:/app
+#     ports:
+#       - '3000:3000'
+#     depends_on:
+#       - database
+#     networks:
+#       - backend
+
+#   database:
+#     container_name: database
+#     image: postgres
+#     env_file:
+#       - .env
+#     ports:
+#       - '5432:5432'
+#     networks:
+#       - backend
 #    volumes:
 #      - ./pgdata:/var/lib/postgres/data
 
-networks:
-  backend:
-    driver: bridge
+# networks:
+#   backend:
+#     driver: bridge
