--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/faker": "^6.6.9",
-    "@types/node": "^20.1.1",
+    "@types/node": "^20.8.0",
     "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
@@ -39,7 +39,10 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
     "swagger-node-express": "^2.1.3",
+    "typeorm": "^0.3.17",
     "yup": "^1.1.1"
   }
 }
