--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "npx prisma generate && ts-node-dev --poll src/App/server.ts",
-    "dev2": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && ts-node-dev --poll src/app/server.ts",
+    "dev": "ts-node-dev --poll src/App/server.ts",
+    "dev2": "nts-node-dev --poll src/app/server.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && nodemon dist/app/server.js",
-    "up:dev": "npm i && npm run build && npx prisma migrate dev && npm run dev",
-    "develop": "docker-compose run --rm --service-ports app"
+    "up:dev": "npm i && npm run build && npm run dev",
+    "develop": "docker-compose run --rm --service-ports app",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -22,7 +23,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/faker": "^6.6.9",
-    "@types/node": "^20.8.0",
+    "@types/node": "^20.8.2",
     "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
